<resources>
    <string name="app_name">Modao</string>
    <string name="ipServer">192.168.137.1</string>
    <string name="expenses">Expenses</string>
    <string name="account">Account</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="welcome">Welcome!</string>
    <string name="name">Name:</string>
    <string name="groupNotification">Group notification</string>
    <string name="friendNotification">Friend notification</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="go">Go!</string>
    <string name="archiveGroup">ARCHIVE GROUP</string>
    <string name="deleteGroup">DELETE GROUP</string>
    <string name="deleteEvent">Delete event</string>
    <string name="all">All</string>
    <string name="archive">Archive</string>
    <string name="active">Active</string>
    <string name="FilterByDate">Filter by date</string>
    <string name="onlyMy">Only my</string>
    <string name="only_expenses">Only expenses</string>
    <string name="transfer">Only transfers</string>
    <string name="my_debt_caps">MY DEBT</string>
    <string name="my_debt"> My debt </string>
    <string name="add_event">ADD EVENT</string>
    <string name="create_expense">Create expense</string>
    <string name="name_no">Name</string>
    <string name="addMoreMember">Add more members to the group</string>
    <string name="addMoreFriend">Add more friends</string>
    <string name="selectSecond">Select the second participant</string>
    <string name="description">Description</string>
    <string name="createGroup">Add new group</string>
    <string name="error">Error</string>
    <string name="findByUuid">🔍 Find by group code</string>
    <string name="notification">Notifications</string>
    <string name="groupUuid">Group code:</string>
    <string name="uuidShow">Your code:</string>
    <string name="alreadyExist">User with this login already exists</string>
    <string name="incorrectLoginOrPassword">Incorrect login or password</string>
    <string name="incorrectData">Incorrect data</string>
    <string name="profile">Profile</string>
    <string name="test">Test string</string>
    <string name="testNum">500</string>
    <string name="serverProblems">Server problems</string>
    <string name="bank">Preferred bank:</string>
    <string name="phone">Phone number:</string>
    <string name="edit">Edit</string>
    <string name="wait">Wait…</string>
    <string name="enterData">Please enter the data</string>
    <string name="members">Members</string>
    <string name="info">Information</string>
    <string name="data_conf">Data confirmation</string>
    <string name="add_group">Add group</string>
    <string name="info_group">Group info</string>
    <string name="participants">Participants</string>
    <string name="tip_who_spend">Who spent</string>
    <string name="enterCoefficientP">Coefficients</string>
    <string name="enterCoefficient">Enter coefficient</string>
    <string name="cost_new_expense">Cost of new expense</string>
    <string name="hint_cost">Enter the cost</string>
    <string name="greeting">Hello!👋</string>
    <string name="enter_username">Enter your username</string>
    <string name="enter_password">Enter your password</string>
    <string name="can_sign_up">If you don\'t have an account yet, you can sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="log_out">Log out</string>
    <string name="create_username">Create a username</string>
    <string name="create_login">Create a login</string>
    <string name="create_password">Create a password</string>
    <string name="information"> Information </string>
    <string name="date_of_creation">Date of creation:</string>
    <string name="link">Link:</string>
    <string name="preferred_bank">Preferred bank:</string>
    <string name="create_expense_head">Create an expense picture</string>
    <string name="new_event">    New event    </string>
    <string name="all_in_button">All in</string>
    <string name="two_button">Two</string>
    <string name="more_options_button">More options</string>
    <string name="finish">Finish</string>
    <string name="enter_cost">Enter cost</string>
    <string name="enter_description">Enter description</string>
    <string name="events">Events</string>
    <string name="filter_events">Filter events</string>
    <string name="continue_button">Continue</string>
    <string name="new_friend_notification">New friend notification</string>
    <string name="new_group_notification">New group notification</string>
    <string name="new_expense_notification">New expense notification</string>
    <string name="my_expenses">My expenses</string>
    <string name="new_friend">New friend:</string>
    <string name="new_group">New Group:</string>
    <string name="new_expense_notify">New expense:</string>
    <string name="add_new_friend">Add new friend</string>
    <string name="add_by_uuid">🔍  Add by user code</string>
    <string name="add_by_guid">🔍  Add by group code</string>
    <string name="add_member_to_the_group">Add member</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_new_member">Select new member</string>
    <string name="completed_the_selection">Completed the selection</string>
    <string name="it_s_a_new_expense">It\'s a new expense</string>
    <string name="it_s_a_new_transfer">It\'s a new transfer</string>
    <string name="select_participant">Select participant</string>
    <string name="not_an_expense">not an expense</string>
    <string name="not_a_transfer">not a transfer</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="_1_0">1.0</string>
    <string name="money">money</string>
    <string name="ruble">ruble</string>
    <string name="finish_the_creation">finish the creation</string>
    <string name="group_members">Group members</string>
    <string name="group_events">Group events</string>
    <string name="data_confirmation_of_the_group">Data confirmation of the group</string>
    <string name="group_head">Group head</string>
    <string name="created">Created:</string>
    <string name="cost">Cost:</string>
    <string name="see_details"><u>See details...</u></string>
    <string name="confirm">Confirm?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_by_user_code_field">add by user code field</string>
    <string name="who_spent">Who spent:</string>
    <string name="who_participated">Who participated:</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="done">Done</string>
    <string name="log_in">Log in</string>
    <string name="pay_for">Pay for</string>
    <string name="new_transfer">New transfer</string>
    <string name="new_expense">New expense</string>
    <string name="new_group_button">New group</string>
</resources>
