<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SeeDetailsFragment">

    <ImageButton
        android:id="@+id/yesButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/yes"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/textConfirm2"
        app:layout_constraintTop_toBottomOf="@+id/textConfirm2"
        app:srcCompat="@drawable/yes_button"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/noButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/no"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/textConfirm2"
        app:layout_constraintTop_toBottomOf="@+id/textConfirm2"
        app:srcCompat="@drawable/no_button" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/deleteEvent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textConfirm2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/roboto"
        android:text="@string/confirm"
        android:textSize="@dimen/plain_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/expenseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/test"
        android:textColor="@android:color/black"
        android:textSize="@dimen/headers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/cost"
        android:textColor="#515151"
        android:textSize="@dimen/subtitle"
        app:layout_constraintEnd_toStartOf="@+id/expenseName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expenseName" />

    <TextView
        android:id="@+id/created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/created"
        android:textColor="#515151"
        android:textSize="@dimen/subtitle"
        app:layout_constraintStart_toStartOf="@+id/cost"
        app:layout_constraintTop_toBottomOf="@+id/cost" />

    <TextView
        android:id="@+id/whoSpent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/who_spent"
        android:textColor="#515151"
        android:textSize="@dimen/subtitle"
        app:layout_constraintStart_toStartOf="@+id/created"
        app:layout_constraintTop_toBottomOf="@+id/created" />

    <TextView
        android:id="@+id/whoParticipated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/date_of_creation"
        android:textColor="#515151"
        android:textSize="@dimen/subtitle"
        app:layout_constraintStart_toStartOf="@+id/whoSpent"
        app:layout_constraintTop_toBottomOf="@+id/whoSpent" />
    <TextView
        android:id="@+id/dateCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/who_participated"
        android:textColor="#515151"
        android:textSize="@dimen/subtitle"
        app:layout_constraintStart_toStartOf="@+id/whoParticipated"
        app:layout_constraintTop_toBottomOf="@+id/whoParticipated" />

    <TextView
        android:id="@+id/theCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/testNum"
        android:textColor="@android:color/black"
        android:textSize="@dimen/subtitle"
        app:layout_constraintStart_toEndOf="@+id/cost"
        app:layout_constraintTop_toBottomOf="@+id/expenseName" />

    <TextView
        android:id="@+id/theCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/test"
        android:textColor="@android:color/black"
        android:textSize="@dimen/subtitle"
        app:layout_constraintStart_toEndOf="@+id/created"
        app:layout_constraintTop_toBottomOf="@+id/theCost" />

    <TextView
        android:id="@+id/theSpender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/test"
        android:textColor="@android:color/black"
        android:textSize="@dimen/subtitle"
        app:layout_constraintStart_toEndOf="@+id/whoSpent"
        app:layout_constraintTop_toBottomOf="@+id/theCreator" />

    <TextView
        android:id="@+id/theDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/test"
        android:textColor="@android:color/black"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/subtitle"
        app:layout_constraintStart_toEndOf="@+id/whoParticipated"
        app:layout_constraintTop_toBottomOf="@+id/theSpender" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:src="@drawable/rub"
        android:contentDescription="@string/ruble"
        app:layout_constraintBottom_toBottomOf="@+id/theCost"
        app:layout_constraintStart_toEndOf="@+id/theCost"
        app:layout_constraintTop_toTopOf="@+id/theCost" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/whoParticipatedRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="135dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateCreation"
        tools:listitem="@layout/who_participated_item" />

</androidx.constraintlayout.widget.ConstraintLayout>