<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:background="@color/white"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onlyMy"
        android:textSize="18sp"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transfer"
        android:textSize="18sp"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event" />

    <RadioButton
        android:id="@+id/onlyMy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_expenses"
        android:textSize="18sp"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transfer" />


</androidx.constraintlayout.widget.ConstraintLayout>