<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/money"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_right_alt_24" />

    <TextView
        android:id="@+id/shortInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/roboto"
        android:text="@string/test"
        android:textColor="@color/black"
        android:textSize="@dimen/plain_text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/amountExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/roboto"
        android:text="@string/testNum"
        android:textAlignment="viewEnd"
        android:textColor="@color/profit"
        android:textSize="@dimen/plain_text"
        app:layout_constraintBottom_toBottomOf="@+id/currencyImage"
        app:layout_constraintEnd_toStartOf="@+id/currencyImage"
        app:layout_constraintTop_toTopOf="@+id/currencyImage" />

    <ImageView
        android:id="@+id/currencyImage"
        android:layout_width="16sp"
        android:layout_height="16dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/ruble"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/ic_profit_rub" />

</androidx.constraintlayout.widget.ConstraintLayout>