<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:paddingBottom="20dp"
    android:layout_height="320dp">

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/test"
        android:textColor="@color/black"
        android:textSize="@dimen/headers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/created"
        android:textColor="@color/black"
        android:textSize="@dimen/subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/whoCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/test"
        android:textColor="@color/black"
        android:textSize="@dimen/subtitle"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/cost"
        android:textColor="@color/black"
        android:textSize="@dimen/subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/test"
        android:textColor="@color/black"
        android:textSize="@dimen/subtitle"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/whoCreated" />

    <Button
        android:id="@+id/buttonDetails"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/see_details"
        android:textColor="#4556AF"
        android:textSize="@dimen/small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cost" />

    <TextView
        android:id="@+id/textConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/roboto"
        android:text="@string/confirm"
        android:textSize="@dimen/plain_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDetails" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/yesButton"
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/yes"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="@dimen/plain_text"
        app:backgroundTint="#FF00D856"
        app:cornerRadius="10dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintEnd_toStartOf="@+id/textConfirm"
        app:layout_constraintTop_toBottomOf="@+id/textConfirm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/noButton"
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/no"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="@dimen/plain_text"
        app:backgroundTint="#FFFF4E60"
        app:cornerRadius="10dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintStart_toEndOf="@+id/textConfirm"
        app:layout_constraintTop_toBottomOf="@+id/textConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>